--- a/assets/www/style.css
+++ b/assets/www/style.css
@@ -14,20 +14,24 @@ html,body { width:100%; height:100%; margin:0; padding: 0; border:none; }
  text-align: center;
  white-space: nowrap;
 }
-#buttons > div {
+#buttons > a {
  display: inline-block;
  width: 200px; height: 160px;
 }
-#buttons > div {
+#buttons > a {
  background-image: url('images/button-overlay.png');
  background-repeat: no-repeat;
  padding:0; margin: 0;
 }
-#buttons > div.black  { background-color: #030303; }
-#buttons > div.lilac  { background-color: #ce72b9; }
-#buttons > div.orange { background-color: #ef7c11; }
-#buttons > div.white  { background-color: #cacaca; }
-#buttons > div.yellow { background-color: #ebb002; }
+#buttons > a.black  { background-color: #030303; }
+#buttons > a.lilac  { background-color: #ce72b9; }
+#buttons > a.orange { background-color: #ef7c11; }
+#buttons > a.white  { background-color: #cacaca; }
+#buttons > a.yellow { background-color: #ebb002; }
+
+#buttons > a:hover {
+ background-image: url('images/button-overlay-hover.png');
+}
 
 
 /* Graphics */
