--- a/assets/www/style.css
+++ b/assets/www/style.css
@@ -22,6 +22,8 @@ html,body { width:100%; height:100%; margin:0; padding: 0; border:none; }
  background-image: url('images/button-overlay.png');
  background-repeat: no-repeat;
  padding:0; margin: 0;
+ -webkit-tap-highlight-color: rgba(0,0,0,0);
+ tap-highlight-color: rgba(0,0,0,0);
 }
 #buttons > a.black  { background-color: #030303; }
 #buttons > a.lilac  { background-color: #ce72b9; }
@@ -29,7 +31,7 @@ html,body { width:100%; height:100%; margin:0; padding: 0; border:none; }
 #buttons > a.white  { background-color: #cacaca; }
 #buttons > a.yellow { background-color: #ebb002; }
 
-#buttons > a:hover {
+#buttons > a.hover {
  background-image: url('images/button-overlay-hover.png');
 }
 
