--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ html,body { width:100%; height:100%; margin:0; padding: 0; border:none; }
   left: 0; right: 0;
   top: 0; height: 162px;
   background: url('images/clouds.png') repeat-x;
-  background-position-x: -200px;
+  background-position: -200px 0;
 }
 
 #balloons > div {
