Add basic splash screen on android.

--- a/res/xml/cordova.xml
+++ b/res/xml/cordova.xml
@@ -31,6 +31,7 @@
 
     <log level="DEBUG"/>
     <preference name="classicRender" value="true" />
+    <preference name="fullscreen" value="true" />
 </cordova>
 
 
