Use a single sprite for nell (avoids flashing when we change Nell's color).

--- a/assets/www/style.css
+++ b/assets/www/style.css
@@ -156,43 +156,31 @@ html,body { width:100%; height:100%; margin:0; padding: 0; border:none; }
   background-repeat: no-repeat;
 }
 .grass #nell .hair { background-image: url('images/nell-hair.png'); }
-/*
-.grass #nell .body { background-image: url('images/nell-body0.png'); }
-.grass #nell .head { background-image: url('images/nell-head0.png'); }
-*/
+.grass #nell .body { background-image: url('images/nell-body.png'); }
+.grass #nell .head { background-image: url('images/nell-head.png'); }
 
-.grass #nell.n0 .body { background-image: url('images/nell-body0.png'); }
-.grass #nell.n0 .head { background-image: url('images/nell-head0.png'); }
-
-.grass #nell.n1 .body { background-image: url('images/nell-body1.png'); }
-.grass #nell.n1 .head { background-image: url('images/nell-head1.png'); }
-
-.grass #nell.n2 .body { background-image: url('images/nell-body2.png'); }
-.grass #nell.n2 .head { background-image: url('images/nell-head2.png'); }
-
-.grass #nell.n3 .body { background-image: url('images/nell-body3.png'); }
-.grass #nell.n3 .head { background-image: url('images/nell-head3.png'); }
-
-.grass #nell.n4 .body { background-image: url('images/nell-body4.png'); }
-.grass #nell.n4 .head { background-image: url('images/nell-head4.png'); }
-
-.grass #nell.n5 .body { background-image: url('images/nell-body5.png'); }
-.grass #nell.n5 .head { background-image: url('images/nell-head5.png'); }
-
-.grass #nell.n6 .body { background-image: url('images/nell-body6.png'); }
-.grass #nell.n6 .head { background-image: url('images/nell-head6.png'); }
-
-.grass #nell.n7 .body { background-image: url('images/nell-body7.png'); }
-.grass #nell.n7 .head { background-image: url('images/nell-head7.png'); }
-
-.grass #nell.n8 .body { background-image: url('images/nell-body8.png'); }
-.grass #nell.n8 .head { background-image: url('images/nell-head8.png'); }
-
-.grass #nell.n9 .body { background-image: url('images/nell-body9.png'); }
-.grass #nell.n9 .head { background-image: url('images/nell-head9.png'); }
-
-.grass #nell.n10 .body { background-image: url('images/nell-body10.png'); }
-.grass #nell.n10 .head { background-image: url('images/nell-head10.png'); }
+.grass #nell.n0 .body,
+.grass #nell.n0 .head { background-position: 0px 0px; }
+.grass #nell.n1 .body,
+.grass #nell.n1 .head { background-position: -321px 0px; }
+.grass #nell.n2 .body,
+.grass #nell.n2 .head { background-position: -642px 0px; }
+.grass #nell.n3 .body,
+.grass #nell.n3 .head { background-position: -963px 0px; }
+.grass #nell.n4 .body,
+.grass #nell.n4 .head { background-position: -1284px 0px; }
+.grass #nell.n5 .body,
+.grass #nell.n5 .head { background-position: -1605px 0px; }
+.grass #nell.n6 .body,
+.grass #nell.n6 .head { background-position: -1926px 0px; }
+.grass #nell.n7 .body,
+.grass #nell.n7 .head { background-position: -2247px 0px; }
+.grass #nell.n8 .body,
+.grass #nell.n8 .head { background-position: -2568px 0px; }
+.grass #nell.n9 .body,
+.grass #nell.n9 .head { background-position: -2889px 0px; }
+.grass #nell.n10 .body,
+.grass #nell.n10 .head { background-position: -3210px 0px; }
 
 .grass #clouds {
   position: absolute;
