--- a/assets/www/style.css
+++ b/assets/www/style.css
@@ -144,6 +144,11 @@ html,body { width:100%; height:100%; margin:0; padding: 0; border:none; }
 #clouds, #foreground, #sprouts, #hero, #balloons {
   pointer-events: none;
 }
+/* don't highlight nell when she is tapped */
+#nell {
+ -webkit-tap-highlight-color: rgba(0,0,0,0);
+ tap-highlight-color: rgba(0,0,0,0);
+}
 .grass #nell {
   position: absolute;
   width: 321px; height: 466px;
