--- a/assets/www/style.css
+++ b/assets/www/style.css
@@ -1,14 +1,15 @@
 html,body { width:100%; height:100%; margin:0; padding: 0; border:none; }
 
 /* Positioning */
-#game, #buttons, #balloons {
+#game, #buttons, #balloons, #level {
  position: absolute;
  left: 0; right: 0;
  overflow: hidden;
 }
+#level { bottom: 0; height: 400%; }
 #game { top: 0; bottom: 160px; }
 #buttons { bottom: 0; height: 160px; }
-#balloons { top:0; bottom: 0; }
+#balloons { height: 25%; bottom: 0; }
 #buttons {
  background: black;
  text-align: center;
@@ -37,14 +38,21 @@ html,body { width:100%; height:100%; margin:0; padding: 0; border:none; }
 
 
 /* Graphics */
-.grass #background {
+.grass #background,
+.grass #background > .stars {
   position: absolute;
-  top: 0; bottom: 0;
   left: 0; right: 0;
-  background-color: #00f;
+}
+.grass #background {
+  top: 0; bottom: 0;
+  background-color: #000;
   background-image: url('images/grass-back.png');
   background-repeat: repeat-x;
   background-position: bottom;
+}
+.grass #background > .stars {
+  top: 0; height: 25%;
+  background: url('images/star-tile.png') repeat;
 }
 .grass #foreground, .grass #sprouts {
   position: absolute;
@@ -140,21 +148,110 @@ html,body { width:100%; height:100%; margin:0; padding: 0; border:none; }
   left: 227px; width: 151px;
   background: url('images/grass-hero.png') no-repeat;
 }
-/* make sure #nell gets pointer events */
-#clouds, #foreground, #sprouts, #hero, #balloons {
+/* make sure #nell>div gets pointer events */
+#clouds, #clouds > *, #foreground, #sprouts, #hero, #balloons {
   pointer-events: none;
 }
 /* don't highlight nell when she is tapped */
-#nell {
+#nell, #nell * {
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  tap-highlight-color: rgba(0,0,0,0);
 }
 .grass #nell {
   position: absolute;
-  width: 321px; height: 466px;
-  right: -124px; bottom: 15px;
+  left: 0; right: 0;
+  bottom: 0; height: 25%;
 }
 .grass #nell > div {
+  position: absolute; right: 0;
+}
+.grass #nell > .ground { bottom: 0; }
+.grass #nell > .troposphere { bottom: 100%; }
+.grass #nell > .stratosphere { bottom: 200%; }
+.grass #nell > .mesosphere { bottom: 300%; }
+
+.grass #nell > .ground {
+  width: 197px; height: 466px;
+}
+.grass #nell > .ground > .nell {
+  position: absolute; right: -124px; bottom: 15px;
+}
+.grass #nell > .troposphere {
+  width: 260px; height: 865px;
+}
+.grass #nell > .troposphere > .nellscaler {
+  position: absolute; right: -67px; bottom: 55px;
+  clip: rect(auto,auto,220px,auto);
+  -webkit-transform-origin: bottom right;
+  -webkit-transform: scale3d(0.62,0.62,1);
+  -moz-transform-origin: bottom right;
+  -moz-transform: scale3d(0.62,0.62,1);
+}
+.grass #nell > .troposphere .nell {
+  position: absolute; right: 0; bottom: 0;
+}
+.grass #nell > .troposphere > .hotair {
+  position: absolute;
+  width: 510px; height: 825px;
+  bottom: 39px; right: -250px;
+  background: url('images/hotair.png') no-repeat;
+}
+.grass #nell > .stratosphere {
+  width: 561px; height: 305px;
+  -webkit-transform: rotate(8deg) translate3d(-10px,0,0);
+  -moz-transform: rotate(8deg) translate(-10px,0);
+}
+.grass #nell > .stratosphere > .nellscaler {
+  position: absolute; bottom: 117px; right: 138px;
+  clip: rect(52px,auto,220px,auto);
+  -webkit-transform-origin: bottom left;
+  -webkit-transform: scale3d(0.3,0.3,1);
+  -moz-transform-origin: bottom left;
+  -moz-transform: scale3d(0.3,0.3,1);
+}
+.grass #nell > .stratosphere .jet1,
+.grass #nell > .stratosphere .jet2 {
+  position: absolute; bottom: 0; right: 0;
+  width: 561px; height: 305px;
+  background-repeat: no-repeat;
+}
+.grass #nell .jet1 {
+  background-image: url('images/jet1.png');
+}
+.grass #nell .jet2 {
+  background-image: url('images/jet2.png');
+}
+.grass #nell > .mesosphere {
+  width: 255px; height: 473px;
+  -webkit-transform: translate3d(0,-153px,0);
+  -moz-transform: translate(0,-153px);
+
+}
+.grass #nell > .mesosphere > .nellscaler {
+  position: absolute; top: 36px; left: -99px;
+  -webkit-transform-origin: top center;
+  -webkit-transform: rotate(-39.5deg);
+  -moz-transform-origin: top center;
+  -moz-transform: rotate(-39.5deg);
+}
+.grass #nell > .mesosphere .astronaut1,
+.grass #nell > .mesosphere .astronaut2 {
+  position: absolute; bottom: 0; left: 0;
+  width: 393px; height: 473px;
+  background-repeat: no-repeat;
+}
+.grass #nell .astronaut1 {
+  background-image: url('images/astronaut1.png');
+}
+.grass #nell .astronaut2 {
+  background-image: url('images/astronaut2.png');
+}
+/* layout for nell parts */
+.grass #nell .nell,
+.grass #nell .nellscaler {
+  width: 321px; height: 466px;
+}
+.grass #nell .nell > div {
   position: absolute;
   left: 0; right: 0;
   top: 0; bottom: 0;
@@ -190,9 +287,28 @@ html,body { width:100%; height:100%; margin:0; padding: 0; border:none; }
 .grass #clouds {
   position: absolute;
   left: 0; right: 0;
-  top: 0; height: 162px;
+  bottom: 152px; height: 25%;
+}
+.grass #clouds > div {
+  position: absolute;
+  left: 0; right: 0; height: 294px;
   background: url('images/clouds.png') repeat-x;
   background-position: -200px 0;
+}
+.grass #clouds > .troposphere {
+  top: 0;
+}
+.grass #clouds > .stratosphere {
+  top: -100%;
+}
+.grass #clouds > .mesosphere {
+  top: -200%;
+  -webkit-animation-delay: -1s;
+}
+.grass #clouds > .stars {
+  top: -300%;
+  background-image: url('images/star.png');
+  background-position: bottom left;
 }
 
 #balloons > div, #balloons > div > div {
@@ -348,18 +464,102 @@ html,body { width:100%; height:100%; margin:0; padding: 0; border:none; }
         -moz-transform: translate(0px,0px);
     }
 }
-.anim .grass #nell {
+.anim .grass #nell .ground .nell,
+.anim .grass #nell .troposphere .nell {
     -webkit-animation: nell-breathe-body 3000ms infinite both ease-in-out;
     -moz-animation: nell-breathe-body 3000ms infinite both ease-in-out;
 }
-.anim .grass #nell .head,
-.anim .grass #nell .hair {
+.anim .grass #nell .ground .head,
+.anim .grass #nell .ground .hair,
+.anim .grass #nell .troposphere .head,
+.anim .grass #nell .troposphere .hair {
     -webkit-animation: nell-breathe-head 3000ms infinite both ease-in-out;
     -moz-animation: nell-breathe-head 3000ms infinite both ease-in-out;
     -webkit-transform-origin: 140px 148px;
     -moz-transform-origin: 140px 148px;
 }
 
+/* ----------- hot air balloon animation --------- */
+@-webkit-keyframes hotair-bob {
+    0% {
+      -webkit-transform: rotate(-1deg);
+    }
+    50% {
+      -webkit-transform: rotate(1deg) translate3d(-5px,-5px,0);
+    }
+    100% {
+      -webkit-transform: rotate(-1deg);
+    }
+}
+@-moz-keyframes hotair-bob {
+    0% {
+      -moz-transform: rotate(-1deg);
+    }
+    50% {
+      -moz-transform: rotate(1deg) translate(-5px,-5px);
+    }
+    100% {
+      -moz-transform: rotate(-1deg);
+    }
+}
+.anim .grass #nell .troposphere {
+    -webkit-animation: hotair-bob 15s infinite both ease-in-out;
+    -moz-animation: hotair-bob 15s infinite both ease-in-out;
+}
+/* ----------- jet animation --------- */
+@-webkit-keyframes jet-bob {
+    0% {
+      -webkit-transform: rotate(8deg) translate3d(-10px,0,0);
+    }
+    50% {
+      -webkit-transform: rotate(0deg) translate3d(0px,-20px,0);
+    }
+    100% {
+      -webkit-transform: rotate(8deg) translate3d(-10px,0,0);
+    }
+}
+@-moz-keyframes jet-bob {
+    0% {
+      -moz-transform: rotate(8deg) translate(-10px,0);
+    }
+    50% {
+      -moz-transform: rotate(0deg) translate(0px,-20px);
+    }
+    100% {
+      -moz-transform: rotate(8deg) translate(-10px,0);
+    }
+}
+.anim .grass #nell .stratosphere {
+    -webkit-animation: jet-bob 20s infinite both ease-in-out;
+    -moz-animation: jet-bob 20s infinite both ease-in-out;
+}
+/* ----------- astronaut animation --------- */
+@-webkit-keyframes astronaut-bob {
+    0% {
+      -webkit-transform: translate3d(0,-153px,0);
+    }
+    50% {
+      -webkit-transform: rotate(5deg) translate3d(0px,-200px,0);
+    }
+    100% {
+      -webkit-transform: translate3d(0,-153px,0);
+    }
+}
+@-moz-keyframes astronaut-bob {
+    0% {
+      -moz-transform: translate(0,-153px);
+    }
+    50% {
+      -moz-transform: rotate(0deg) translate(0px,-20px);
+    }
+    100% {
+      -moz-transform: translate(0,-153px);
+    }
+}
+.anim .grass #nell .mesosphere {
+    -webkit-animation: astronaut-bob 20s infinite both ease-in-out;
+    -moz-animation: astronaut-bob 20s infinite both ease-in-out;
+}
 /* ----------- bug animation ----------- */
 @-webkit-keyframes hero-shake {
     0% {
@@ -396,7 +596,7 @@ html,body { width:100%; height:100%; margin:0; padding: 0; border:none; }
     background-position: 0px 0px;
   }
   100% {
-    background-position: 1240px 0px;
+    background-position: 1109px 0px;
   }
 }
 @-moz-keyframes clouds-drift {
@@ -404,10 +604,26 @@ html,body { width:100%; height:100%; margin:0; padding: 0; border:none; }
     background-position: 0px 0px;
   }
   100% {
-    background-position: 1240px 0px;
+    background-position: 1109px 0px;
   }
 }
-.grass #clouds {
+.grass #clouds > div {
   -webkit-animation: clouds-drift 180s infinite normal none linear;
   -moz-animation: clouds-drift 180s infinite normal none linear;
+}
+.grass #clouds > .stratosphere {
+  -webkit-animation-delay: -60s;
+  -webkit-animation-duration: 160s;
+  -moz-animation-delay: -60s;
+  -moz-animation-duration: 160s;
+}
+.grass #clouds > .mesosphere {
+  -webkit-animation-delay: -120s;
+  -webkit-animation-duration: 140s;
+  -moz-animation-delay: -120s;
+  -moz-animation-duration: 140s;
+}
+.grass #clouds > .stars {
+  -webkit-animation: none;
+  -moz-animation: none;
 }
